--- a/templates/views/elearning/user/profile.jade
+++ b/templates/views/elearning/user/profile.jade
@@ -1,4 +1,4 @@
-extends ../layouts/elearning
+extends ../../../layouts/elearning
 
 //- block css
   link(rel="stylesheet" type="text/css" href="/styles/analytics.css")
