edited signup and profile page, still has bugs in profile

--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -95,15 +95,14 @@ html
 
         #user-login-links
           if user
-            //- if user.canAccessKeystone
-              //- li: a(href='/keystone') Open Keystone
-            a(href='/elearning/profile').not-active.login-link
-              span.user-name #{user.name.full} &ensp;
-              i.fa.fa-bell-o(aria-hidden="true")
-              | &emsp;
-            a(href='/keystone/signout').not-active.login-link Sign Out
-            //- | &emsp;
-            //- a(href='/elearning/analytics').login-link Elearning Analytics
+            if user.isElearningUser == true
+              a(href='/elearning/profile').not-active.login-link
+                span.user-name #{user.name.full} &ensp;
+                i.fa.fa-bell-o(aria-hidden="true")
+                | &emsp;
+              a(href='/keystone/signout').not-active.login-link Sign Out
+              //- | &emsp;
+              //- a(href='/elearning/analytics').login-link Elearning Analytics
           else
             a(href='/keystone/signin?from=' + loginRedirect, class="not-active login-link") Sign In
             | &emsp;
