--- a/templates/views/elearning/user/signup.jade
+++ b/templates/views/elearning/user/signup.jade
@@ -15,12 +15,32 @@ block signup
             
           .col-xs-6.col-md-6
             input.form-control.input-box(type='text', name='last', value=formData.last, placeholder='Last Name')
-        
+      
       .form-group
         label.control-label Email
         .row
           .col-xs-6.col-md-12
             input.form-control.input-box(type='email', name='email', value=formData.email, placeholder='Email')
+      .form-group
+        label.control-label Birthday
+        .row
+          .col-xs-6.col-md-12
+            input.form-control.input-box(type='date', name='birthday', value=formData.birthday)
+      //- .form-group
+        label.col-sm-2.control-label Sex
+        .col-sm-10
+          select(name='sex').form-control
+            option(value='') Sex
+            each type in sexTypes
+              option(value=type.value, selected=formData.sex === type.value)= type.label
+      .form-group
+        label.control-label Address
+        .row
+          .col-xs-6.col-md-6
+            input.form-control.input-box(type='text', name='state', value=formData.state, placeholder='Province')
+            
+          .col-xs-6.col-md-6
+            input.form-control.input-box(type='text', name='country', value=formData.country, placeholder='Country')
       .form-group
         label.control-label Password
         .row
