--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -15,10 +15,13 @@ block content
             .row
               each publication in publications
                 .col-xs-4.col-md-2
-                  a(href="/eresources/publication/"+publication._id)
-                    img(src=publication._.cover.fit(100, 180, {}))
-                    br
-                    | #{publication.get('title.trunc')}
+                  .publication-col-grid
+                    a(href="/eresources/publication/"+publication._id)
+                      .cover
+                        img(src=publication._.cover.fit(100, 180, {}))
+                      .title
+                        h3
+                          small #{publication.get('title.trunc')}
               .col-xs-12.more-link
                 a(href="/eresources/publications") More Publications
 
