polished ui for user views, profile & user-activity

--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -142,30 +142,6 @@ body {
   border-bottom: 1px solid #eee;
 }
 
-@media (min-width: 768px) {
-  .sidebar-nav .navbar .navbar-collapse {
-    padding: 0;
-    max-height: none;
-  }
-  .sidebar-nav .navbar ul {
-    float: none;
-    display: block;
-  }
-  .sidebar-nav .navbar li {
-    float: none;
-    display: block;
-  }
-  .sidebar-nav .navbar li a {
-    padding-top: 12px;
-    padding-bottom: 12px;
-  }
-}
-
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
-  background-color:  #3062B7;
-  color: white;
-}
-
 .dashboard{
-  border-left: 1px solid gray;
+  border-right: 1px solid #ddd;
 }
