--- a/public/styles/analytics.css
+++ b/public/styles/analytics.css
@@ -59,7 +59,6 @@
 #userVisitsWorld{
   height: 350px;
   min-width: 310px;
-  max-width: 700px;
   margin-bottom: 3%;
 }
 
@@ -77,7 +76,6 @@
 
 #userViewByISP{
   min-width: 310px;
-  max-width: 900px;
   height: 350px;
   margin-bottom: 3%;
 }
@@ -97,16 +95,10 @@
   height: 350px;
   margin-bottom: 3%;
 }
-#allReactionsRatio{
-  max-width: 300px;
-  height: 300px;
-  margin: 0 auto
-}
 
 #popularperregion{
   height: 350px;
   min-width: 310px;
-  max-width: 600px;
   margin-bottom: 3%;
 }
 .glyphicon-star{
@@ -128,6 +120,6 @@
 .dashboard .col-md-3 .media{
   margin-top: 1%;
 }
-.dashboard .col-md-6{
-
+.dashboard .col-md-6, .col-md-8, .col-md-12{
+  padding: 0.5% 0.5% 0.5% 0.5%;
 }
