--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -1,6 +1,7 @@
 include ../mixins/flash-messages
 include ../mixins/elearning/search
 include ../mixins/elearning/navigation
+include ../mixins/elearning/learning-content
 
 doctype html
 html
