--- a/templates/views/elearning/popular.jade
+++ b/templates/views/elearning/popular.jade
@@ -3,67 +3,21 @@ extends ../../layouts/elearning
 block js
   |  $('.dropdown-toggle').dropdown()S
 
-mixin navigation(action)
-  .container
-    .row
-      nav.navbar.navbar-default
-        .container-fluid
-          //- Mobile menu
-          .navbar-header
-            button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#search-view-nav").navbar-toggle.collapsed
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-
-            
-            .collapse.navbar-collapse(id='search-view-nav')
-              form.navbar-form.navbar-left
-                .form-group
-                  .row
-                    .col-xs-6.col-md-8
-                      input.form-control(type='text', placeholder='Search')
-                    .col-xs-6.col-md-4
-                      button.btn.btn-default(type='submit') Submit
-              //- ul.nav.navbar-nav.navbar-right
-                +selectView()
-
-
-mixin selectDuration(action)
-  .dropdown
-    button.btn.btn-default.dropdown-toggle(type='button', id='duration', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true') Popular this &emsp;
-      span.caret
-    ul.dropdown-menu(aria-labelledby='duration')
-      li
-        a(href=url+'page='+page+'&view='+viewStyle+'&duration=day') day
-      li
-        a(href=url+'page='+page+'&view='+viewStyle+'&duration=week') week
-      li 
-        a(href=url+'page='+page+'&view='+viewStyle+'&duration=month') month
 
 mixin popularLO-grid(learningObjects)
   .row
     .col-md-8.col-xs-7
       h3.text-left Popular Lessons this #{duration} (#{paginatePopularLO.total})
     .col-md-2.col-xs-3
-      +selectDuration()
+      +duration-popular()
     .col-md-2.col-xs-2.pull-right
-      +selectView()
+      +view-popular()
   .row.equal-height
     if learningObjects.length
       each learningObject in learningObjects
-        .col-xs-6.col-md-4
-          .thumbnail
-            if learningObject.thumbnail.exists
-              img.card-img-top(src=learningObject._.thumbnail.fit(200, 150), alt=learningObject.title, height='150px', width='200px').img-responsive
-            else 
-              img.card-img-top(src="http://placehold.it/200x150", alt='No Available Image' height='150px', width='200px').img-responsive
-            .caption
-              h3= learningObject.title.substring(0, 50)
-              p= learningObject.content.brief.substring(0, 100)
-              br
-              p
-                a.btn.btn-info.btn-block(href=learningObject.url) Learn more
+        .col-xs-6.col-md-3
+          +learning-object-card(learningObject, learningObject.url)
+          
     else
       h3.text-muted There are no popular lessons this #{duration} yet.
     
@@ -74,51 +28,24 @@ mixin popularLO-list(learningObjects)
     .col-md-8.col-xs-7
       h3.text-left Popular Lessons this #{duration} (#{paginatePopularLO.total})
     .col-md-2.col-xs-3
-      +selectDuration()
+      +duration-popular()
     .col-md-2.col-xs-2.pull-right
-      +selectView()
+      +view-popular()
   .row
     if learningObjects.length
-      .col-md-12
+      .col-md-9
         .panel
           table.table.table-hover
             thead
             tbody
               each learningObject in learningObjects
-                tr.media
-                  td
-                    .media-left
-                      if learningObject.thumbnail.exists
-                        a(href=learningObject.url)
-                          img(src=learningObject._.thumbnail.limit(200,150), alt=learningObject.title, height='150px', width='200px').img-rounded.media-object
-                      else
-                        a(href=learningObject.url)
-                          img(src="http://placehold.it/200x150", height='150px', width='200px').img-rounded.media-object
-                    .media-body
-                      a(href=learningObject.url)
-                        h3.media-heading= learningObject.title
-                        .row
-                          span= learningObject.content.brief
-                        hr
-                        .row
-                          .col-md-2
-                            p #{learningObject.viewCount} Views
-
-                          .col-md-2
-                            p #{learningObject.likes.length} &nbsp;
-                              i.fa.fa-thumbs-o-up.fa-lg(aria-hidden="true")
-                          .col-md-2
-                            p #{learningObject.happy.length} &nbsp;
-                              i.fa.fa-smile-o.fa-lg(aria-hidden="true")
-                          .col-md-2
-                            p #{learningObject.happy.length} &nbsp;
-                              i.fa.fa-frown-o.fa-lg(aria-hidden="true")
-
+                +learning-object-tr-media(learningObject, learningObject.url)
+                    
     else
       h3.text-muted There are no popular lessons this #{duration} yet.
 
 block content
-  +navigation()
+  +search()
   .container
     .panel.panel-default
       .panel-body
@@ -126,5 +53,5 @@ block content
           +popularLO-grid(paginatePopularLO.results)
         else
           +popularLO-list(paginatePopularLO.results)
-        +selectPage(paginatePopularLO)
+        +paginate-popular(paginatePopularLO)
     
