--- a/templates/mixins/elearning/learning-content.jade
+++ b/templates/mixins/elearning/learning-content.jade
@@ -1,9 +1,9 @@
 mixin learning-object-card(learningObject, redirect)
   .card
     if learningObject.thumbnail.exists
-      img.card-img-top(src=learningObject.thumbnail.limit(200,150), alt=learningObject.title, height="150px", width="200px")
+      img.card-img-top(src=learningObject.thumbnail.limit(250,200), alt=learningObject.title, height="200px", width="250px")
     else
-      img.card-img-top(src="http://placehold.it/200x150", alt="No Available Image" , height="150px", width="200px")
+      img.card-img-top(src="http://placehold.it/250x200?text=No+Available+Image", alt="No Available Image" , height="150px", width="200px")
     .card-block
       .card-title.truncate-text.text-primary #{learningObject.title}
       //- .meta
@@ -16,9 +16,9 @@ mixin learning-object-card(learningObject, redirect)
 mixin course-card(course, redirect)
   .card
     if course.thumbnail.exists
-      img.card-img-top(src=course.thumbnail, alt=course.title, height="150px", width="200px")
+      img.card-img-top(src=course.thumbnail, alt=course.title, height="200px", width="250px")
     else
-      img.card-img-top(src="http://placehold.it/200x150", alt="No Available Image" , height="150px", width="200px")
+      img.card-img-top(src="http://placehold.it/250x200?text=No+Available+Image", alt="No Available Image" , height="200px", width="250px")
     .card-block
       .card-title.truncate-text.text-primary #{course.title}
       //- .meta
@@ -26,6 +26,44 @@ mixin course-card(course, redirect)
         p.block-with-text #{course.content.brief}
     .card-footer
       a.pull-right(href=redirect) Learn More
+
+
+mixin learning-object-tr-media(learningObject, redirect)
+  tr.media
+    td
+      .media-left
+        if learningObject.thumbnail.exists
+          a(href=redirect)
+            img(src=learningObject._.thumbnail.limit(200,150), alt=learningObject.title, height='150px', width='200px').img-rounded.media-object
+        else
+          a(href=redirect)
+            img(src="http://placehold.it/200x150?text=No+Available+Image", height='150px', width='200px').img-rounded.media-object
+      .media-body
+        a(href=learningObject.url)
+          h3.media-heading= learningObject.title
+          p.block-with-text #{learningObject.content.brief}
+          hr
+          +learning-object-reactions(learningObject)
+
+          if learningObject.tags != null
+            +learning-object-tags(learningObject.tags)
+
+mixin course-tr-media(course, redirect)
+  tr.media
+    td
+      .media-left
+        if course.thumbnail.exists
+          a(href=redirect)
+            img(src=course._.thumbnail.limit(200,150), alt=course.title, height='150px', width='200px').img-rounded.media-object
+        else
+          a(href=redirect)
+            img(src="http://placehold.it/200x150?text=No+Available+Image", height='150px', width='200px').img-rounded.media-object
+      .media-body
+        a(href=course.url)
+          h3.media-heading= course.title
+          p.block-with-text #{course.content.brief}
+          
+
 
 mixin learning-object-reactions(currentLO)
   .row
@@ -47,39 +85,3 @@ mixin learning-object-tags(tags)
             a(href='/elearning/learning-objects?industry='+tag.key) #[span.label.label-info #{tag.name}] &nbsp;
           else if tag.category == 'null'
             a(href='/elearning/learning-objects?specific='+tag.key) #[span.label.label-info #{tag.name}] &nbsp;
-
-mixin learning-object-tr-media(learningObject, redirect)
-  tr.media
-    td
-      .media-left
-        if learningObject.thumbnail.exists
-          a(href=redirect)
-            img(src=learningObject._.thumbnail.limit(200,150), alt=learningObject.title, height='150px', width='200px').img-rounded.media-object
-        else
-          a(href=redirect)
-            img(src="http://placehold.it/200x150", height='150px', width='200px').img-rounded.media-object
-      .media-body
-        a(href=learningObject.url)
-          h3.media-heading= learningObject.title
-          p.block-with-text #{learningObject.content.brief}
-          hr
-          +learning-object-reactions(learningObject)
-
-          if learningObject.tags != null
-            +learning-object-tags(learningObject.tags)
-
-mixin course-tr-media(course, redirect)
-  tr.media
-    td
-      .media-left
-        if course.thumbnail.exists
-          a(href=redirect)
-            img(src=course._.thumbnail.limit(200,150), alt=course.title, height='150px', width='200px').img-rounded.media-object
-        else
-          a(href=redirect)
-            img(src="http://placehold.it/200x150", height='150px', width='200px').img-rounded.media-object
-      .media-body
-        a(href=course.url)
-          h3.media-heading= course.title
-          p.block-with-text #{course.content.brief}
-          
