fixed bugs with signup and edit profile

--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -2,6 +2,7 @@ include ../mixins/flash-messages
 include ../mixins/elearning/search
 include ../mixins/elearning/navigation
 include ../mixins/elearning/learning-content
+include ../mixins/elearning/helper
 
 doctype html
 html
