--- a/templates/views/elearning/user/signup.jade
+++ b/templates/views/elearning/user/signup.jade
@@ -22,24 +22,33 @@ block signup
           .col-xs-6.col-md-12
             input.form-control.input-box(type='email', name='email', value=formData.email, placeholder='Email')
       .form-group
-        label.control-label Birthday
         .row
-          .col-xs-6.col-md-12
+          label.col-sm-2.control-label Birthday
+          .col-xs-6.col-md-5
             input.form-control.input-box(type='date', name='birthday', value=formData.birthday)
-      //- .form-group
-        label.col-sm-2.control-label Sex
-        .col-sm-10
-          select(name='sex').form-control
-            option(value='') Sex
-            each type in sexTypes
-              option(value=type.value, selected=formData.sex === type.value)= type.label
+
+          label.col-sm-2.control-label Sex
+          .col-sm-3
+            select(name='sex').form-control
+              option(value='') Sex
+              each type in sexTypes
+                option(value=type.value, selected=formData.sex === type.value)= type.label
       .form-group
         label.control-label Address
         .row
-          .col-xs-6.col-md-6
-            input.form-control.input-box(type='text', name='state', value=formData.state, placeholder='Province')
+          .col-xs-6.col-md-4
+            select(name='suburb').form-control
+              option(value='') City
+              each type in suburbs
+                option(value=type.value, selected=formData.suburb === type.value) #{type.label}
+          
+          .col-xs-6.col-md-4
+            select(name='state').form-control
+              option(value='') Region
+              each type in states
+                option(value=type.value, selected=formData.state === type.value) #{type.label}
             
-          .col-xs-6.col-md-6
+          .col-xs-6.col-md-4
             input.form-control.input-box(type='text', name='country', value=formData.country, placeholder='Country')
       .form-group
         label.control-label Password
@@ -60,6 +69,9 @@ block content
         .col-xs-12.col-md-6.col-md-offset-3
           .panel.panel-default
             .panel-body
+              .elearning-page-header
+                h3 Sign Up for Elearning
+          
               if user
                 p You are already logged in.
               else
